// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic input field 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c4 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c4[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4::-webkit-input-placeholder {
  opacity: 0.6;
}

.c4::-moz-placeholder {
  opacity: 0.6;
}

.c4:-ms-input-placeholder {
  opacity: 0.6;
}

.c4::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div />
    <div
      class="c2 c3"
    >
      <textarea
        aria-invalid="false"
        aria-required="false"
        class="c4 c5"
        rows="3"
        style="size: default;"
        type="text"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`renders correctly for a disabled input field 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c4 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c4[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4::-webkit-input-placeholder {
  opacity: 0.6;
}

.c4::-moz-placeholder {
  opacity: 0.6;
}

.c4:-ms-input-placeholder {
  opacity: 0.6;
}

.c4::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div />
    <div
      class="c2 c3"
    >
      <textarea
        aria-invalid="false"
        aria-required="false"
        class="c4 c5"
        disabled=""
        rows="3"
        style="size: default;"
        type="text"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`renders correctly for a full width input field 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c4.c4.c4 {
  position: relative;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c3 {
  display: inline-block;
}

.c5 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c5[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c5:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5::-webkit-input-placeholder {
  opacity: 0.6;
}

.c5::-moz-placeholder {
  opacity: 0.6;
}

.c5:-ms-input-placeholder {
  opacity: 0.6;
}

.c5::placeholder {
  opacity: 0.6;
}

.c5 {
  width: 100%;
}

.c2 {
  width: 100%;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div />
    <div
      class="c3 c4"
      style="width: 100%;"
      width="100%"
    >
      <textarea
        aria-invalid="false"
        aria-required="false"
        class="c5 c6"
        rows="3"
        style="size: default;"
        type="text"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`renders correctly for a required field 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c8.c8.c8 {
  position: relative;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c7 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c9[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c9::-webkit-input-placeholder {
  opacity: 0.6;
}

.c9::-moz-placeholder {
  opacity: 0.6;
}

.c9:-ms-input-placeholder {
  opacity: 0.6;
}

.c9::placeholder {
  opacity: 0.6;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="username"
        style="font-weight: 600;"
      >
        Username
      </label>
    </div>
    <div />
    <div
      class="c7 c8"
    >
      <textarea
        aria-invalid="false"
        aria-required="true"
        class="c9 c10"
        id="username"
        rows="3"
        style="size: default;"
        type="text"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`renders correctly for an input field with a default value 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c4 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c4[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4::-webkit-input-placeholder {
  opacity: 0.6;
}

.c4::-moz-placeholder {
  opacity: 0.6;
}

.c4:-ms-input-placeholder {
  opacity: 0.6;
}

.c4::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div />
    <div
      class="c2 c3"
    >
      <textarea
        aria-invalid="false"
        aria-required="false"
        class="c4 c5"
        rows="3"
        style="size: default;"
        type="text"
      >
        Awesome value
      </textarea>
    </div>
    <div />
  </div>
</div>
`;

exports[`renders correctly for an input field with a description 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c10.c10.c10 {
  position: relative;
}

.c12 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c9 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c11[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c11:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11::-webkit-input-placeholder {
  opacity: 0.6;
}

.c11::-moz-placeholder {
  opacity: 0.6;
}

.c11:-ms-input-placeholder {
  opacity: 0.6;
}

.c11::placeholder {
  opacity: 0.6;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c8 .c13 {
  top: 0.1em;
}

.c3 {
  margin-bottom: 0 !important;
}

.c7 {
  display: block;
  font-size: 0.8rem;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="username"
        style="font-weight: 600;"
      >
        Username
      </label>
    </div>
    <span
      class="c7 c8 c1"
    >
      Required for your fannypack
    </span>
    <div
      class="c9 c10"
    >
      <textarea
        aria-invalid="false"
        aria-required="false"
        class="c11 c12"
        id="username"
        rows="3"
        style="size: default;"
        type="text"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`renders correctly for an input field with a hint 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c8.c8.c8 {
  position: relative;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c7 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c9[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c9::-webkit-input-placeholder {
  opacity: 0.6;
}

.c9::-moz-placeholder {
  opacity: 0.6;
}

.c9:-ms-input-placeholder {
  opacity: 0.6;
}

.c9::placeholder {
  opacity: 0.6;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

abbr.c12 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c12 {
  font-style: italic;
}

kbd.c12 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c12 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c12 {
  font-weight: bold;
}

sub.c12,
sup.c12 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c12,
u.c12 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c12,
cite.c12,
var.c12,
em.c12 {
  font-style: italic;
}

kbd.c12,
pre.c12,
samp.c12 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c12 .c13 {
  top: 0.1em;
}

.c3 {
  margin-bottom: 0 !important;
}

.c11 {
  display: block;
  font-size: 0.8rem;
  margin-top: 0.25rem;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="username"
        style="font-weight: 600;"
      >
        Username
      </label>
    </div>
    <div />
    <div
      class="c7 c8"
    >
      <textarea
        aria-invalid="false"
        aria-required="false"
        class="c9 c10"
        id="username"
        rows="3"
        style="size: default;"
        type="text"
      />
    </div>
    <span
      class="c11 c12 c1"
    >
      Must be awesome
    </span>
  </div>
</div>
`;

exports[`renders correctly for an input field with a placeholder 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c4 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c4[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4::-webkit-input-placeholder {
  opacity: 0.6;
}

.c4::-moz-placeholder {
  opacity: 0.6;
}

.c4:-ms-input-placeholder {
  opacity: 0.6;
}

.c4::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div />
    <div
      class="c2 c3"
    >
      <textarea
        aria-invalid="false"
        aria-required="false"
        class="c4 c5"
        placeholder="Awesome placeholder"
        rows="3"
        style="size: default;"
        type="text"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`renders correctly for an optional input field 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c10.c10.c10 {
  position: relative;
}

.c12 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c9 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c11[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c11:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11::-webkit-input-placeholder {
  opacity: 0.6;
}

.c11::-moz-placeholder {
  opacity: 0.6;
}

.c11:-ms-input-placeholder {
  opacity: 0.6;
}

.c11::placeholder {
  opacity: 0.6;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c8 .c13 {
  top: 0.1em;
}

.c3 {
  margin-bottom: 0 !important;
}

.c7 {
  font-size: 0.8rem;
  color: #708da8;
  margin-left: 0.5rem;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="username"
        style="font-weight: 600;"
      >
        Username
      </label>
      <span
        class="c7 c8 c1"
      >
        OPTIONAL
      </span>
    </div>
    <div />
    <div
      class="c9 c10"
    >
      <textarea
        aria-invalid="false"
        aria-required="false"
        class="c11 c12"
        id="username"
        rows="3"
        style="size: default;"
        type="text"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`sizes renders correctly for an input field with size large 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c4 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c4[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4::-webkit-input-placeholder {
  opacity: 0.6;
}

.c4::-moz-placeholder {
  opacity: 0.6;
}

.c4:-ms-input-placeholder {
  opacity: 0.6;
}

.c4::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div />
    <div
      class="c2 c3"
    >
      <textarea
        aria-invalid="false"
        aria-required="false"
        class="c4 c5"
        rows="3"
        style="size: default;"
        type="text"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`sizes renders correctly for an input field with size medium 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c4 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c4[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4::-webkit-input-placeholder {
  opacity: 0.6;
}

.c4::-moz-placeholder {
  opacity: 0.6;
}

.c4:-ms-input-placeholder {
  opacity: 0.6;
}

.c4::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div />
    <div
      class="c2 c3"
    >
      <textarea
        aria-invalid="false"
        aria-required="false"
        class="c4 c5"
        rows="3"
        style="size: default;"
        type="text"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`sizes renders correctly for an input field with size small 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c4 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c4[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4::-webkit-input-placeholder {
  opacity: 0.6;
}

.c4::-moz-placeholder {
  opacity: 0.6;
}

.c4:-ms-input-placeholder {
  opacity: 0.6;
}

.c4::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div />
    <div
      class="c2 c3"
    >
      <textarea
        aria-invalid="false"
        aria-required="false"
        class="c4 c5"
        rows="3"
        style="size: default;"
        type="text"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`states renders correctly for an input field with state danger 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c4 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c4[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4::-webkit-input-placeholder {
  opacity: 0.6;
}

.c4::-moz-placeholder {
  opacity: 0.6;
}

.c4:-ms-input-placeholder {
  opacity: 0.6;
}

.c4::placeholder {
  opacity: 0.6;
}

.c4 {
  border-color: #e24c67;
  box-shadow: #e24c67 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div />
    <div
      class="c2 c3"
    >
      <textarea
        aria-invalid="true"
        aria-required="false"
        class="c4 c5"
        rows="3"
        style="size: default;"
        type="text"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`states renders correctly for an input field with state primary 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c4 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c4[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4::-webkit-input-placeholder {
  opacity: 0.6;
}

.c4::-moz-placeholder {
  opacity: 0.6;
}

.c4:-ms-input-placeholder {
  opacity: 0.6;
}

.c4::placeholder {
  opacity: 0.6;
}

.c4 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div />
    <div
      class="c2 c3"
    >
      <textarea
        aria-invalid="false"
        aria-required="false"
        class="c4 c5"
        rows="3"
        style="size: default;"
        type="text"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`states renders correctly for an input field with state success 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c4 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c4[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4::-webkit-input-placeholder {
  opacity: 0.6;
}

.c4::-moz-placeholder {
  opacity: 0.6;
}

.c4:-ms-input-placeholder {
  opacity: 0.6;
}

.c4::placeholder {
  opacity: 0.6;
}

.c4 {
  border-color: #4ca26c;
  box-shadow: #4ca26c 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div />
    <div
      class="c2 c3"
    >
      <textarea
        aria-invalid="false"
        aria-required="false"
        class="c4 c5"
        rows="3"
        style="size: default;"
        type="text"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`states renders correctly for an input field with state warning 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3.c3.c3 {
  position: relative;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  display: inline-block;
}

.c4 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c4[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c4:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4::-webkit-input-placeholder {
  opacity: 0.6;
}

.c4::-moz-placeholder {
  opacity: 0.6;
}

.c4:-ms-input-placeholder {
  opacity: 0.6;
}

.c4::placeholder {
  opacity: 0.6;
}

.c4 {
  border-color: #ffc94c;
  box-shadow: #ffc94c 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div />
    <div
      class="c2 c3"
    >
      <textarea
        aria-invalid="false"
        aria-required="false"
        class="c4 c5"
        rows="3"
        style="size: default;"
        type="text"
      />
    </div>
    <div />
  </div>
</div>
`;
